# sluggify-rs

./: Cargo.toml  README.md
src/: lib.rs
src/sluggify/: mod.rs
tests/: sluggify_test.rs
