[package]
name = "sluggify"
version = "0.1.0"
edition = "2021"
authors = ["Faith Olusegun <propenster@proton.me>"]
repository = "https://github.com/propenster/sluggify-rs"
documentation = "https://docs.rs/sluggify"
description = "Simple slug or clean url generator for rust. With default settings, you will get an hyphenized, lowercase, alphanumeric version of any string you please, with any diacritics removed, whitespace and dashes collapsed, and whitespace trimmed."
keywords = ["slug", "slug generator", "sluggify", "slug helper", "url cleaner"]
categories = ["strings", "slug", "string utils", "url cleaner"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.3"
